feat: add utilities, off-site improvements, and frontage tables to the form

--- a/page1.html
+++ b/page1.html
@@ -509,6 +509,189 @@
                   <textarea class="textarea-input" rows="3"></textarea>
                 </td>
               </tr>
+
+              <!-- Row 6: Utilities, Off-site Improvements, and Frontage Tables -->
+              <tr class="table-row">
+                <td class="table-cell" colspan="4">
+                  <div class="three-tables-container">
+                    <!-- Utilities Table -->
+                    <div class="table-section">
+                      <table class="borderless-table">
+                        <tr>
+                          <th>Utilities</th>
+                          <th>Public</th>
+                          <th>Other</th>
+                          <th>Provider/Description</th>
+                        </tr>
+                        <tr>
+                          <td>Electricity</td>
+                          <td><input type="checkbox" /></td>
+                          <td><input type="checkbox" /></td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>Gas</td>
+                          <td><input type="checkbox" /></td>
+                          <td><input type="checkbox" /></td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>Water</td>
+                          <td><input type="checkbox" /></td>
+                          <td><input type="checkbox" /></td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>Sanitary Sewer</td>
+                          <td><input type="checkbox" /></td>
+                          <td><input type="checkbox" /></td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>Storm Sewer</td>
+                          <td><input type="checkbox" /></td>
+                          <td><input type="checkbox" /></td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>Telephone</td>
+                          <td><input type="checkbox" /></td>
+                          <td><input type="checkbox" /></td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>Multimedia</td>
+                          <td><input type="checkbox" /></td>
+                          <td><input type="checkbox" /></td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                        </tr>
+                      </table>
+                    </div>
+
+                    <!-- Off-site Improvements Table -->
+                    <div class="table-section">
+                      <table class="borderless-table">
+                        <tr>
+                          <th>Off-site Improvements</th>
+                          <th>Type</th>
+                          <th>Public</th>
+                          <th>Private</th>
+                        </tr>
+                        <tr>
+                          <td>Street</td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                          <td><input type="checkbox" /></td>
+                          <td><input type="checkbox" /></td>
+                        </tr>
+                        <tr>
+                          <td>Width</td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                          <td></td>
+                          <td></td>
+                        </tr>
+                        <tr>
+                          <td>Surface</td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                          <td></td>
+                          <td></td>
+                        </tr>
+                        <tr>
+                          <td>Curb/Gutter</td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                          <td><input type="checkbox" /></td>
+                          <td><input type="checkbox" /></td>
+                        </tr>
+                        <tr>
+                          <td>Sidewalk</td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                          <td><input type="checkbox" /></td>
+                          <td><input type="checkbox" /></td>
+                        </tr>
+                        <tr>
+                          <td>Street Lights</td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                          <td><input type="checkbox" /></td>
+                          <td><input type="checkbox" /></td>
+                        </tr>
+                        <tr>
+                          <td>Alley</td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                          <td><input type="checkbox" /></td>
+                          <td><input type="checkbox" /></td>
+                        </tr>
+                      </table>
+                    </div>
+
+                    <!-- Frontage Table -->
+                    <div class="table-section">
+                      <table class="borderless-table">
+                        <tr>
+                          <th>Frontage</th>
+                          <th>Typical</th>
+                        </tr>
+                        <tr>
+                          <td>Topography</td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>Size</td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>Shape</td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>Drainage</td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>View</td>
+                          <td>
+                            <input type="text" class="borderless-input" />
+                          </td>
+                        </tr>
+                      </table>
+                    </div>
+                  </div>
+                </td>
+              </tr>
             </table>
           </div>
         </div>
