feat: add new site elements, FEMA info, and site comments sections to the form; enhance table row border enforcement in styles

--- a/page1.html
+++ b/page1.html
@@ -692,6 +692,43 @@
                   </div>
                 </td>
               </tr>
+
+              <!-- Row 7: Other Site Elements -->
+              <tr class="table-row">
+                <td class="table-cell" colspan="4">
+                  <label>Other site elements:</label>
+                  <label><input type="checkbox" /> Inside Lot</label>
+                  <label><input type="checkbox" /> Corner Lot</label>
+                  <label><input type="checkbox" /> Cul de Sac</label>
+                  <label><input type="checkbox" /> Underground Utilities</label>
+                  <label><input type="checkbox" /> Other (describe)</label>
+                  <input type="text" class="text-input" />
+                </td>
+              </tr>
+
+              <!-- Row 8: FEMA Info -->
+              <tr class="table-row">
+                <td class="table-cell" colspan="4">
+                  <label>FEMA Spec'l Flood Hazard Area:</label>
+                  <label><input type="checkbox" /> Yes</label>
+                  <label><input type="checkbox" /> No</label>
+                  <label>FEMA Flood Zone:</label>
+                  <input type="text" class="text-input" />
+                  <label>FEMA Map #:</label>
+                  <input type="text" class="text-input" />
+                  <label>FEMA Map Date:</label>
+                  <input type="text" class="text-input" />
+                </td>
+              </tr>
+
+              <!-- Row 9: Site Comments -->
+              <tr class="table-row">
+                <td class="table-cell" colspan="4">
+                  <label>Site Comments:</label>
+                  <br />
+                  <textarea class="textarea-input" rows="3"></textarea>
+                </td>
+              </tr>
             </table>
           </div>
         </div>
